--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   floor: ^0.14.0
   sqflite: ^1.3.0
   hive: ^1.4.4
+  hive_generator: ^0.7.1
   path_provider: ^1.6.14
 
 dev_dependencies:
